# articles

./: .gitignore  FUNCTIONALITY.md  README.md  articles  articles-open  pyproject.toml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.github/: gsd-file-manifest.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
articles-ios/: project.yml
articles-ios/App/: ArticlesApp.swift  ContentView.swift  HistoryView.swift  Info.plist  ReadabilityExtractor.swift  ReadabilityJS.swift  ReaderView.swift
articles-ios/AppIcon.icon/: icon.json
articles-ios/ArticlesIOS.xcodeproj/: project.pbxproj
articles-ios/ShareExtension/: Info.plist  ShareViewController.swift
articles-ios/Tests/: ArticleExtractorTests.swift  ArticleRepositoryTests.swift  URLCanonicalizerTests.swift
articles-ios/Widget/: ArticlesWidget.entitlements  ArticlesWidget.swift  (+1 more)
history/: 260321-belkins-wireless-hdmi-adapter-freed-me-from-a-long-annoying-.md  260321-much-ado-about-protein.md
prompts/: arguments.txt  critique.txt  eli5.txt  summarize.txt  takeaways.txt
tests/: test_app.py  test_extractor.py  test_history.py  test_history_basic.py
(+122 files in other folders)
