[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "articles"
version = "0.1.0"
description = "Read web articles distraction-free in the terminal"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "trafilatura>=2.0.0",
]

[project.scripts]
articles = "articles.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
